--- a/traffic/readme
+++ b/traffic/readme
@@ -1,1 +1,8 @@
 
+Download Traffic System and Observer Datasets:
+
+ARZ_sys_data
+https://drive.google.com/file/d/16WxmawkIze5ogDQcnNl5lth7O_J4dunk/view?usp=sharing
+
+ARZ_obs_data
+https://drive.google.com/file/d/1DW4E5zPCCNa58oRA-mOnt7taTTr0HAFo/view?usp=sharing
