--- a/PT_obs/readme
+++ b/PT_obs/readme
@@ -1,1 +1,6 @@
 
+Download system and observer dataset:
+
+System Data: https://drive.google.com/file/d/12EPGyA6xSrGwbiP5SRGP47ND3LWq2ZB5/view?usp=sharing
+
+Observer Data: https://drive.google.com/file/d/1eYaP2sgAQvY4gtOQPwtYWzxEuxVrvir7/view?usp=sharing
