--- a/reactor/readme
+++ b/reactor/readme
@@ -1,1 +1,5 @@
 
+Download system and observer datasets:
+
+Observer: https://drive.google.com/file/d/1xrECRCdnj7i9WIU1RSawfz8jObxPjNsd/view?usp=sharing
+System: https://drive.google.com/file/d/1-2X-u6GEEKJpzjmBafKBpbjJUceu-_YC/view?usp=sharing
